TAG: seqcacheload-6-0-0-4
TAG: seqcacheload-6-0-0-3
TAG: seqcacheload-6-0-0-2
TAG: seqcacheload-6-0-0-1
DATE: 07/22/2015, 07/29/2015
STAFF: lec, kstone 
CHANGES:
1) TR11750/postgres
2) bug fix to seqdummy.py
3) bug fixes for seqprobe.py and seqmarker.py

TAG: seqcacheload-sybase
DATE: 06/25/2015
STAFF: lec 
CHANGES:
1) TR11750/before removing sybase flipablity

TAG : seqcacheload-5-2-2-4
TAG : seqcacheload-5-2-2-3
DATE : 05/22/2015, 05/26/2015
STAFF : lec
CHANGES: 
1) TR11652/seqdescription/obsolete

TAG : seqcacheload-5-2-2-2
TAG : seqcacheload-5-2-2-1
DATE : 05/21/2015, 05/22/2015
STAFF : lec
CHANGES: 
1) TR12029/comparePostgres.py : obsolete

TAG: seqcacheload-5-2-1-6
DATE: 04/10/2015
STAFF: kstone
1) converted seqprobe.py

TAG: seqcacheload-5-2-1-5
DATE: 03/02/2015
STAFF: dbm	
CHANGES:
1) Configuration.default - Don't set DB_TYPE -- done in mgiconfig

TAG: seqcacheload-5-2-1-4
DATE: 01/19/2015
STAFF: sc	
CHANGES: TR11897 New Ensembl raw biotypes. 
1) Configuration.default - added "ENSEMBL_EQUIV3" b/c config string too long
TEC, TR_J_pseudogene, processed_pseudogene, unprocessed_pseudogene, 
    translated_processed_pseudogene 
2) seqmarker.py - made aware of env var ENSEMBL_EQUIV3 

TAG: seqcacheload-5-2-1-3
DATE: 12/17/2014
STAFF: kstone
CHANGES: postgres conversion and tests

TAG: seqcacheload-5-2-1-2
DATE: 11/04/2014
STAFF: sc
CHANGES: TR11872 - Ensembl release 78
1) Configuration.default - add new Ensembl biotype mappings

TAG: seqcacheload-5-1-9-2
DATE: 11/04/2014
STAFF: sc
CHANGES: TR11788
1) Configuration.default - added new NCBI, Ensembl and VEGA raw biotype 
mappings

TAG: seqcacheload-5-1-9-1
DATE: 07/31/2014
STAFF: dbm
CHANGES: TR11662
1) seqmarker.py: added organism key 95 for xenopus

TAG: seqcacheload-5-1-7-1
DATE: 01/28/2014
STAFF: lec
CHANGES:
1) TR11584/media wiki change

TAG: seqcacheload-5-1-6-1
DATE: 01/23/2014
STAFF: lec
CHANGES:
1) TR11555/Configuration, seqmarker.py - update biotype equivalency mapping
for ensembl 74
