@@ -1,3 +1,9 @@
+TAG: seqcacheload-6-0-0-5
+DATE: 08/18/2015
+STAFF: lec 
+CHANGES:
+1) TR11750/seqdummy.py : removed "upper()" clause
+
 TAG: seqcacheload-6-0-0-4
 TAG: seqcacheload-6-0-0-3
 TAG: seqcacheload-6-0-0-2
